--- a/package.json
+++ b/package.json
@@ -15,8 +15,10 @@
     "@mui/icons-material": "^6.1.10",
     "@mui/material": "^6.4.11",
     "axios": "^1.9.0",
+    "date-fns": "^4.1.0",
     "html5-qrcode": "^2.3.8",
     "react": "^18.3.1",
+    "react-chartjs-2": "^5.3.0",
     "react-dom": "^18.3.1",
     "react-router-dom": "^7.6.0",
     "sweetalert2": "^11.15.2"
