--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "@fortawesome/react-fontawesome": "^0.2.2",
     "@mui/icons-material": "^6.1.10",
     "@mui/material": "^6.4.11",
+    "@mui/x-date-pickers": "^8.3.0",
+    "@zxing/browser": "^0.1.5",
     "axios": "^1.9.0",
     "date-fns": "^4.1.0",
     "html5-qrcode": "^2.3.8",
