--- a/package.json
+++ b/package.json
@@ -21,7 +21,11 @@
     "@zxing/browser": "^0.1.5",
     "axios": "^1.9.0",
     "date-fns": "^4.1.0",
+    "html2canvas": "^1.4.1",
+    "html2pdf.js": "^0.10.3",
     "html5-qrcode": "^2.3.8",
+    "jspdf": "^3.0.1",
+    "qrcode": "^1.5.4",
     "react": "^18.3.1",
     "react-chartjs-2": "^5.3.0",
     "react-dom": "^18.3.1",
